# My-tutorial-References

./: MongoEngine.ipynb  Numpy Tutorial.ipynb  README.md  advanced_python.ipynb  phone&email.py
AIL/: README.md  astar.py  bfs.py  dfs.py  dls.py  mini.py
BDA/: bloom_filter.py  collaborative_filtering.py  file.txt  flajolet_martin.py  user_based.py  word_count.py
Click Tutorial/: 1st tutorial.py  2nd Tutorial.py  3rd tutorial.py  4th Tutorial.py  5th Tutorial.py
DC/: README.md
DWM/: README.md  apriori.py  data.csv  kmean_algo.py  naive.py
Dapper/: README.md
Entity Framework/: Entity Script.sql  Entity Script2.sql  README.md
LINQ/: README.md  linq to sql.sql
Matplotlib_tutorial/: Matplotlib tutorial.ipynb  gas_price.csv
MongoDB/: README.md  tutorial.txt  tutorial1.mongodb.js  tutorial2.mongodb.js  tutorial3.py
Naive/: data.csv  naive.py
PTB Tutorial/: README.md  Token.txt  requirements.txt
Pandas tutorial/: Pandas.ipynb  data.csv  extraced_data.xlsx
Poetry Tutorial/: README.md
Poetry Tutorial/poetry_tutorial/: pyproject.toml
Poetry Tutorial/python-package/: Tutorial.py  pyproject.toml
Python Tutorial/: Advanced.ipynb  Basics.ipynb  Intermediate.ipynb
R/: Tutorial1.R  Tutorial2.R  Tutorial3.R  Tutorial4.R  Tutorial5.R  Tutorial6.R  data.csv  file.csv
SQL/: README.md  tutorial1.sql  tutorial2.sql  tutorial3.sql  tutorial4.sql  (+1 more)
SQL Server/: Practice.sql  README.md  Scrum Practice.sql  Tutorial 1.sql  Tutorial 2.sql  Tutorial 3.sql  Tutorial 4.sql  Tutorial 5.sql  Tutorial 6.sql  Tutorial 7.sql  Tutorial 8.sql  Tutorial 9.sql
(+157 files in other folders)
