[tool.poetry]
name = "poetry-tutorial"
version = "0.1.0"
description = ""
authors = ["Prathameshdhande22 <prathameshdhande534@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
