[tool.poetry]
name = "python-package"
version = "0.1.0"
description = ""
authors = ["Prathameshdhande22 <prathameshdhande534@gmail.com>"]
readme = "README.md"
packages = [{include = "python_package"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
